-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.12.0
-
Lustre Build: https://build.whamcloud.com/job/lustre-master/3811
Distro/Arch: RHEL7.5/aarch64 (client), RHEL7.5/x86_64 (server)
-
3
-
9223372036854775807
sanity-dom sanityn test 11 hit the following LBUG on client:
Lustre: DEBUG MARKER: == sanityn test 11: execution of file opened for write should return error =========================== 08:47:52 (1540543672) LustreError: 12136:0:(file.c:470:ll_dom_finish_open()) ASSERTION( lnb.lnb_file_offset % ((1UL) << 16) == 0 ) failed: LustreError: 12136:0:(file.c:470:ll_dom_finish_open()) LBUG Pid: 12136, comm: bash 4.14.0-49.13.1.el7a.aarch64 #1 SMP Thu Sep 27 14:45:52 UTC 2018 Call Trace: libcfs_call_trace+0x78/0xe0 [libcfs] lbug_with_loc+0x54/0xbc [libcfs] ll_dom_finish_open+0x9a0/0xb30 [lustre] ll_intent_file_open+0x568/0xb08 [lustre] ll_file_open+0x25c/0xca8 [lustre] do_dentry_open+0x200/0x304 vfs_open+0x5c/0x8c do_last+0x250/0x6d4 path_openat+0x8c/0x2bc do_filp_open+0x7c/0xec do_sys_open+0x178/0x230 SyS_openat+0x3c/0x48 __sys_trace_return+0x0/0x4 0xffffffffffffffff Kernel panic - not syncing: LBUG CPU: 1 PID: 12136 Comm: bash Kdump: loaded Tainted: G OE ------------ 4.14.0-49.13.1.el7a.aarch64 #1 Hardware name: QEMU KVM Virtual Machine, BIOS 0.0.0 02/06/2015 Call trace: [<ffff000008088e6c>] dump_backtrace+0x0/0x23c [<ffff0000080890cc>] show_stack+0x24/0x2c [<ffff00000880e27c>] dump_stack+0x84/0xa8 [<ffff0000080d2994>] panic+0x138/0x2a0 [<ffff000000d109b0>] lbug_with_loc+0x84/0xbc [libcfs] [<ffff00000326a880>] ll_dom_finish_open+0x9a0/0xb30 [lustre] [<ffff00000326e338>] ll_intent_file_open+0x568/0xb08 [lustre] [<ffff00000326eb34>] ll_file_open+0x25c/0xca8 [lustre] [<ffff0000082995bc>] do_dentry_open+0x200/0x304 [<ffff00000829abb8>] vfs_open+0x5c/0x8c [<ffff0000082ac9c4>] do_last+0x250/0x6d4 [<ffff0000082aced4>] path_openat+0x8c/0x2bc [<ffff0000082ae334>] do_filp_open+0x7c/0xec [<ffff00000829b058>] do_sys_open+0x178/0x230 [<ffff00000829b194>] SyS_openat+0x3c/0x48 Exception stack(0xffff00000cb6fec0 to 0xffff00000cb70000) fec0: ffffffffffffff9c 000000003984dd60 0000000000000000 0000000000000000 fee0: 0000000000000000 0000ffffddea9af0 0000000000000000 00000000ffffffff ff00: 0000000000000038 0000ffffddea9ad0 00000000ffffffff 00000000004fd000 ff20: 0000000000000001 0000000000000008 0000000000000001 0000000000000000 ff40: 00000000004f0200 0000ffffab7a0cac 0000ffffddea9870 000000000000001a ff60: 000000003984dd60 00000000004f8000 0000ffffab944090 000000003983eb10 ff80: 0000000039854d50 0000000000000000 00000000004f0000 000000003984e9d0 ffa0: 000000003984ad10 0000ffffddea9990 0000000000430fe0 0000ffffddea9990 ffc0: 0000ffffab7a0d30 0000000080000000 ffffffffffffff9c 0000000000000038 ffe0: 0000000000000000 0000000000000000 0000000000000000 0000000000000000 [<ffff00000808359c>] __sys_trace_return+0x0/0x4 SMP: stopping secondary CPUs Starting crashdump kernel... Bye!
Maloo report: https://testing.whamcloud.com/test_sets/8c682bdc-d9d0-11e8-b46b-52540065bddc
- is cloned by
-
LU-12014 check correct size in ll_dom_finish_open()
-
- Resolved
-
- is duplicated by
-
LU-11627 LustreError: 86028:0:(file.c:454:ll_dom_finish_open()) ASSERTION( lnb.lnb_file_offset % (1UL << 16) == 0 ) failed:
-
- Resolved
-
- is related to
-
LU-10300
Can the Lustre 2.10.x clients support 64K kernel page?
-
- Resolved
-